@@ -23,6 +23,7 @@ import java.awt.EventQueue;
 import java.io.File;
 import java.io.FileFilter;
 import java.io.FilenameFilter;
+import java.io.IOException;
 import java.lang.reflect.Constructor;
 import java.lang.reflect.Modifier;
 import java.net.MalformedURLException;
@@ -30,6 +31,9 @@ import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLClassLoader;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
@@ -48,6 +52,9 @@ import java.util.jar.JarEntry;
 import java.util.jar.JarFile;
 import java.util.stream.Collectors;
 import java.util.zip.ZipEntry;
+import org.apache.commons.collections.iterators.EnumerationIterator;
+import org.apache.commons.collections.iterators.IteratorChain;
+import org.apache.commons.collections.iterators.IteratorEnumeration;
 import org.apache.commons.configuration.Configuration;
 import org.apache.commons.configuration.ConfigurationException;
 import org.apache.commons.configuration.FileConfiguration;
@@ -65,6 +72,8 @@ import org.parosproxy.paros.view.View;
 import org.zaproxy.zap.Version;
 import org.zaproxy.zap.control.AddOn.AddOnRunRequirements;
 import org.zaproxy.zap.control.AddOn.ExtensionRunRequirements;
+import org.zaproxy.zap.extension.AddOnInstallationStatusListener;
+import org.zaproxy.zap.extension.AddOnInstallationStatusListener.StatusUpdate.Status;
 import org.zaproxy.zap.extension.pscan.PluginPassiveScanner;
 import org.zaproxy.zap.utils.ZapXmlConfiguration;
 
@@ -89,7 +98,7 @@ public class AddOnLoader extends URLClassLoader {
     private static final String ADDON_RUNNABLE_ALL_EXTENSIONS_KEY = "extensions.extension";
 
     /** A "null" object, for use when no callback is given during the uninstallation process. */
-    private static final AddOnUninstallationProgressCallback NULL_CALLBACK =
+    static final AddOnUninstallationProgressCallback NULL_CALLBACK =
             NullUninstallationProgressCallBack.getSingleton();
 
     private static final Logger LOGGER = LogManager.getLogger(AddOnLoader.class);
@@ -101,6 +110,7 @@ public class AddOnLoader extends URLClassLoader {
     private Lock installationLock = new ReentrantLock();
     private AddOnCollection aoc = null;
     private List<File> jars = new ArrayList<>();
+
     /**
      * Addons can be included in the ZAP release, in which case the user might not have permissions
      * to delete the files. To support the removal of such addons we just maintain a 'block list' in
@@ -294,7 +304,7 @@ public class AddOnLoader extends URLClassLoader {
             if (LOGGER.isDebugEnabled()) {
                 LOGGER.debug(
                         "Can't run add-on {} because of missing requirements: {}",
-                        ao.getName(),
+                        ao.getId(),
                         AddOnRunIssuesUtils.getRunningIssues(reqs));
             }
         }
@@ -361,11 +371,15 @@ public class AddOnLoader extends URLClassLoader {
         addOnLoaders.put(ao.getId(), addOnClassLoader);
     }
 
+    Class<?> loadClassNoAddOns(String name, boolean resolve) throws ClassNotFoundException {
+        return super.loadClass(name, resolve);
+    }
+
     @Override
-    public Class<?> loadClass(String name) throws ClassNotFoundException {
+    public Class<?> loadClass(String name, boolean resolve) throws ClassNotFoundException {
         synchronized (getClassLoadingLock(name)) {
             try {
-                return loadClass(name, false);
+                return super.loadClass(name, resolve);
             } catch (ClassNotFoundException e) {
                 // Continue for now
             }
@@ -406,6 +420,18 @@ public class AddOnLoader extends URLClassLoader {
             }
         }
         return url;
+    }
+
+    @Override
+    public Enumeration<URL> getResources(String name) throws IOException {
+        IteratorChain urls = new IteratorChain();
+        urls.addIterator(new EnumerationIterator(super.getResources(name)));
+        for (AddOnClassLoader loader : addOnLoaders.values()) {
+            urls.addIterator(new EnumerationIterator(loader.getResources(name)));
+        }
+        @SuppressWarnings("unchecked")
+        Enumeration<URL> result = new IteratorEnumeration(urls);
+        return result;
     }
 
     public AddOnCollection getAddOnCollection() {
@@ -486,9 +512,14 @@ public class AddOnLoader extends URLClassLoader {
             return;
         }
 
+        Control.getSingleton()
+                .getExtensionLoader()
+                .addOnStatusUpdate(new AddOnStatusUpdate(ao, Status.INSTALL, true));
         AddOnInstaller.install(createAndAddAddOnClassLoader(ao), ao);
         ao.setInstallationStatus(AddOn.InstallationStatus.INSTALLED);
-        Control.getSingleton().getExtensionLoader().addOnInstalled(ao);
+        Control.getSingleton()
+                .getExtensionLoader()
+                .addOnStatusUpdate(new AddOnStatusUpdate(ao, Status.INSTALLED, true));
 
         if (runnableAddOns.get(ao) == null) {
             runnableAddOns.put(ao, getRunnableExtensionsWithDeps(reqs));
@@ -636,7 +667,9 @@ public class AddOnLoader extends URLClassLoader {
             removeAddOnClassLoader(ao);
             deleteAddOn(ao, upgrading);
             ao.setInstallationStatus(AddOn.InstallationStatus.UNINSTALLATION_FAILED);
-            Control.getSingleton().getExtensionLoader().addOnUninstalled(ao, false);
+            Control.getSingleton()
+                    .getExtensionLoader()
+                    .addOnStatusUpdate(new AddOnStatusUpdate(ao, Status.UNINSTALLED, false));
             return false;
         }
 
@@ -661,6 +694,10 @@ public class AddOnLoader extends URLClassLoader {
             postponedTasks.addUninstallAddOnTask(ao);
             return false;
         }
+
+        Control.getSingleton()
+                .getExtensionLoader()
+                .addOnStatusUpdate(new AddOnStatusUpdate(ao, Status.UNINSTALL, true));
 
         unloadDependentExtensions(ao);
         softUninstallDependentAddOns(ao);
@@ -687,7 +724,10 @@ public class AddOnLoader extends URLClassLoader {
                         ? AddOn.InstallationStatus.AVAILABLE
                         : AddOn.InstallationStatus.UNINSTALLATION_FAILED);
 
-        Control.getSingleton().getExtensionLoader().addOnUninstalled(ao, uninstalledWithoutErrors);
+        Control.getSingleton()
+                .getExtensionLoader()
+                .addOnStatusUpdate(
+                        new AddOnStatusUpdate(ao, Status.UNINSTALLED, uninstalledWithoutErrors));
         return uninstalledWithoutErrors;
     }
 
@@ -713,12 +753,53 @@ public class AddOnLoader extends URLClassLoader {
     private void deleteAddOn(AddOn addOn, boolean upgrading) {
         AddOnInstaller.uninstallAddOnLibs(addOn);
 
+        File addOnFile = addOn.getFile();
+        if (addOnFile == null || !addOnFile.exists()) {
+            return;
+        }
+
+        if (isInstallationAddOn(addOnFile.toPath())) {
+            LOGGER.debug(
+                    "Not removing add-on in the installation directory: {}",
+                    addOnFile.getAbsolutePath());
+            if (!upgrading) {
+                saveBlockedAddOn(addOn);
+            }
+            return;
+        }
+
         if (addOn.getFile() != null && addOn.getFile().exists()) {
             if (!addOn.getFile().delete() && !upgrading) {
                 LOGGER.debug("Can't delete {}", addOn.getFile().getAbsolutePath());
-                this.blockList.add(addOn.getId());
-                this.saveBlockList();
+                saveBlockedAddOn(addOn);
             }
+        }
+    }
+
+    private void saveBlockedAddOn(AddOn addOn) {
+        if (addOn.isMandatory()) {
+            return;
+        }
+
+        blockList.add(addOn.getId());
+        saveBlockList();
+    }
+
+    List<String> getBlockList() {
+        return blockList;
+    }
+
+    private static boolean isInstallationAddOn(Path file) {
+        Path installDir = Paths.get(Constant.getZapInstall()).resolve(Constant.FOLDER_PLUGIN);
+        if (Files.notExists(installDir)) {
+            return false;
+        }
+
+        try {
+            return Files.isSameFile(installDir, file.getParent());
+        } catch (IOException e) {
+            LOGGER.warn("An error occurred while checking the add-on's dir:", e);
+            return false;
         }
     }
 
@@ -773,6 +854,7 @@ public class AddOnLoader extends URLClassLoader {
             if (runningAddOn.dependsOn(ao)) {
                 softUninstallDependentAddOns(runningAddOn);
 
+                unloadDependentExtensions(runningAddOn);
                 softUninstall(runningAddOn);
             }
         }
@@ -783,6 +865,9 @@ public class AddOnLoader extends URLClassLoader {
             return;
         }
 
+        Control.getSingleton()
+                .getExtensionLoader()
+                .addOnStatusUpdate(new AddOnStatusUpdate(addOn, Status.SOFT_UNINSTALL, true));
         AddOn.InstallationStatus status;
         if (isDynamicallyInstallable(addOn) && AddOnInstaller.softUninstall(addOn, NULL_CALLBACK)) {
             removeAddOnClassLoader(addOn);
@@ -792,9 +877,14 @@ public class AddOnLoader extends URLClassLoader {
         }
 
         addOn.setInstallationStatus(status);
+
         Control.getSingleton()
                 .getExtensionLoader()
-                .addOnSoftUninstalled(addOn, status == AddOn.InstallationStatus.NOT_INSTALLED);
+                .addOnStatusUpdate(
+                        new AddOnStatusUpdate(
+                                addOn,
+                                Status.SOFT_UNINSTALLED,
+                                status == AddOn.InstallationStatus.NOT_INSTALLED));
     }
 
     private void loadBlockList() {
@@ -890,7 +980,7 @@ public class AddOnLoader extends URLClassLoader {
                     LOGGER.debug(
                             "Can't run extension '{}' of add-on '{}' because of missing requirements: {}",
                             extReqs.getClassname(),
-                            addOn.getName(),
+                            addOn.getId(),
                             AddOnRunIssuesUtils.getRunningIssues(extReqs));
                 }
             }
@@ -948,14 +1038,10 @@ public class AddOnLoader extends URLClassLoader {
         return Collections.unmodifiableList(list);
     }
 
-    private void validateNames(List<?> scanRules) {
+    private static void validateNames(List<AbstractPlugin> scanRules) {
         scanRules.forEach(
                 rule -> {
-                    String name =
-                            rule instanceof AbstractPlugin
-                                    ? ((AbstractPlugin) rule).getName()
-                                    : ((PluginPassiveScanner) rule).getName();
-                    if (StringUtils.isBlank(name)) {
+                    if (StringUtils.isBlank(rule.getName())) {
                         LOGGER.log(
                                 Constant.isDevBuild() ? Level.ERROR : Level.WARN,
                                 "Scan rule {} does not have a name.",
@@ -973,18 +1059,11 @@ public class AddOnLoader extends URLClassLoader {
      * @return an unmodifiable {@code List} with all the passive scan rules, never {@code null}
      * @since 2.4.0
      * @see PluginPassiveScanner
+     * @deprecated (2.15.0) The scan rules are loaded by the corresponding extension.
      */
+    @Deprecated(since = "2.15.0", forRemoval = true)
     public List<PluginPassiveScanner> getPassiveScanRules() {
-        ArrayList<PluginPassiveScanner> list = new ArrayList<>();
-        for (AddOn addOn : getAddOnCollection().getAddOns()) {
-            AddOnClassLoader addOnClassLoader = this.addOnLoaders.get(addOn.getId());
-            if (addOnClassLoader != null) {
-                list.addAll(AddOnLoaderUtils.getPassiveScanRules(addOn, addOnClassLoader));
-            }
-        }
-        list.trimToSize();
-        validateNames(list);
-        return Collections.unmodifiableList(list);
+        return List.of();
     }
 
     /**
@@ -1410,6 +1489,34 @@ public class AddOnLoader extends URLClassLoader {
 
         public List<String> getExtensions() {
             return extensions;
+        }
+    }
+
+    private static class AddOnStatusUpdate implements AddOnInstallationStatusListener.StatusUpdate {
+
+        private final AddOn addOn;
+        private final Status status;
+        private final boolean successful;
+
+        private AddOnStatusUpdate(AddOn addOn, Status status, boolean successful) {
+            this.addOn = addOn;
+            this.status = status;
+            this.successful = successful;
+        }
+
+        @Override
+        public boolean isSuccessful() {
+            return successful;
+        }
+
+        @Override
+        public Status getStatus() {
+            return status;
+        }
+
+        @Override
+        public AddOn getAddOn() {
+            return addOn;
         }
     }
 }
